# Compiler_Dynamic

./: .gitignore  CMakeLists.txt  README.md  dynamic_test.c  main.c  printer.c  questions.txt  test.c
include/: ast_analyze.h  ast_semantic.h  basic.h  im_implementation.h  lexical_analysis.h  struct.h
include/ast_semantix/: README.md  ast_scope_ident.h
include/ast_syntax/: README.md  ast_expr.h  ast_oper.h  ast_stmt.h  ast_type.h
include/basic/: README.md  array.h  bool.h  darray.h  error.h  func.h  integer.h  map.h  object.h  object_structs.h  real.h  string.h  tuple.h
include/lexical/: README.md  la_identifier.h  la_integer.h  la_keyword.h  la_special.h  la_string.h
include/memory/: README.md  memory.h
include/struct/: README.md  array.h  ast_node.h  ast_parser.h  bool.h  imp_parser.h  integer.h  la_parser.h  object.h  op_attrib.h  op_block.h  op_closure.h  op_object.h  op_state.h  real.h  string.h  token.h  tuple.h  tuplehash.h
src/: ast_semantic.c  lexical_analysis.c
src/ast_semantix/: ast_scope_ident.c  op_temp.c
src/ast_syntax/: ast_expr.c  ast_oper.c  ast_stmt.c  ast_type.c
src/basic/: array.c  bool.c  darray.c  error.c  func.c  integer.c  map.c  object.c  real.c  string.c  tuple.c
src/im_implementation/: im_compile.c
src/lexical/: la_identifier.c  la_integer.c  la_keyword.c  la_special.c  la_string.c
src/memory/: memory.c
src/struct/: array.c  ast_node.c  ast_parser.c  bool.c  imp_parser.c  integer.c  la_parser.c  object.c  op_attrib.c  op_block.c  op_closure.c  op_object.c  op_state.c  real.c  string.c  token.c  tuple.c  tuplehash.c
tests/: text1.txt  text3.txt  text4.txt  text5.txt
tests/algorithms/bin_search/: code.txt
tests/algorithms/bubble_sort/: code.txt  out.txt
tests/algorithms/gcd/: code.txt
tests/array/function/: code.txt  out.txt
tests/array/operations/: code.txt
tests/basic/reassignement/: code.txt
tests/basic/type_check/: code.txt  out.txt
tests/basic/type_indicator/: code.txt  out.txt
tests/basic/types/: code.txt  out.txt
tests/broken/lexical_circ_brace/: code.txt  error.txt
tests/broken/lexical_curl_brace/: code.txt  error.txt
tests/broken/lexical_sq_brace/: code.txt  error.txt
tests/broken/semantic_ident_not_init/: code.txt  error.txt
tests/broken/semantic_return_not_in_func/: error.txt
tests/broken/syntax_end_of_file/: code.txt  error.txt
tests/for/break/: code.txt
tests/for/simple/: code.txt  out.txt
tests/function/call/: code.txt  out.txt
tests/function/lambda/: code.txt
tests/function/recursion/: code.txt
tests/function/variable/: code.txt
tests/if/simple/: code.txt
tests/interpreter/test1/: code.txt
tests/interpreter/test2/: code.txt  error.txt
tests/interpreter/test3/: code.txt
tests/interpreter/test4/: code.txt
tests/interpreter/test5/: code.txt
tests/loop/array_strings/: code.txt
tests/map/combo/: code.txt
tests/operations/addition/: code.txt  out.txt
(+19 files in other folders)
